added spot for map key.

--- a/flutter_mapdemo/web/index.html
+++ b/flutter_mapdemo/web/index.html
@@ -29,6 +29,10 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
+  <!-- Add your Google Maps API key here -->
+  <script src="https://maps.googleapis.com/maps/api/js?key=YOUR-KEY-HERE"></script>
+
+
   <title>flutter_mapdemo</title>
   <link rel="manifest" href="manifest.json">
 </head>
